--- a/app/src/main/res/layout/fragment_champ.xml
+++ b/app/src/main/res/layout/fragment_champ.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.csc4210.royal.leagueinfo.ChampFragment">
+    tools:context="com.csc4210.royal.leagueinfo.champion_fragments.ChampFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
