--- a/app/src/main/res/layout/fragment_compare_champion.xml
+++ b/app/src/main/res/layout/fragment_compare_champion.xml
@@ -39,15 +39,11 @@
             app:layout_constraintTop_toBottomOf="@+id/img_champ">
 
             <LinearLayout
+                android:id="@+id/linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txt_champ_stats"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
             </LinearLayout>
         </ScrollView>
     </android.support.constraint.ConstraintLayout>
